# pakreqWeb

./: .env.sample  Cargo.toml  README.md
migrations/2020-02-29-203422_initial-schema/: down.sql  up.sql
migrations/2020-02-29-203754_fix-constraint/: down.sql  up.sql
migrations/2020-08-28-063814_add-iter-plan-backend/: down.sql  up.sql
src/: assets.rs  auth.rs  db.rs  main.rs  models.rs  oauth.rs  rest.rs  schema.rs
static/: style.css
templates/: 404.hbs  500.hbs  account.hbs  base.hbs  details.hbs  index.hbs  login.hbs
