[package]
name = "pakreqWeb-rs"
version = "0.1.0"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
actix-web = "3.0"
yarte = { version = "0.12", features = ["html-min"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
env_logger = "0.7"
actix-rt = "1.1"
log = "0.4"
actix-identity = "0.3"
failure = "0.1"
argonautica = { git = "https://github.com/bcmyers/argonautica" }
jsonwebtoken = "7"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono" ] }
anyhow = "1.0"
