[package]
name = "pakreqWeb-rs"
version = "0.1.0"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
actix-web = "3.3"
awc = "2.0"
yarte = { version = "0.15", features = ["html-min"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
rand = "0.8"
log = "0.4"
actix-identity = "0.3"
actix-session = "0.4"
argonautica = { git = "https://github.com/bcmyers/argonautica" }
jsonwebtoken = "7"
sqlx = { version = "0.4", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "chrono" ] }
anyhow = "1.0"
oauth2 = "4.0"
http = "0.2"
base64 = "0.13"
